@@ -74,7 +74,8 @@ Changes in Go4 v4.5.9
    Idea to have similar look and fill like web-based interface, but with 
    native ROOT graphics. 
 22.Support of connection to dabc in gui and hotstart (qt4)
-
+23.When TGraph with time on X axis drawn for the first time, it will be correctly 
+   recognized in the view panel. 
 
 Changes in Go4 v4.5.5
 1. Adjust different macros to use together with ROOT 5.99 
